--- a/ux.html
+++ b/ux.html
@@ -41,8 +41,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://helloprint.recruitee.com/l/en/o/uiux-designer-internship-rotterdam'>
+      UI/UX Designer Internship - Helloprint
+    </a></h5> 
+<p><span class="badge badge-light">Rotterdam</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qFIaVfwc&k=Job&j=owSD9fwU&__jvst=Employee+Referral&__jvsd=soyKShwk&__jvsc=Twitter&bid=nL1gpMwI'>RevUnit Careers - RevUnit Future Positions - UX Designer</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Las Vegas, Nevada  Austin, Texas  United States</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
 <h5><a href='https://digitalinsurancegroup.recruitee.com/o/senior-product-ux-designer'>
@@ -143,7 +149,7 @@
 <p><span class="badge badge-light">Kerala, India  North America</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/McFadyenDigital/743999698471068-ux-designer-contract-'>McFadyen Digital UX Designer (Contract) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/McFadyenDigital/743999698471068-ux-designer-contract-'>McFadyen Digital UX Designer (Contract) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Brazil  North America</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -165,7 +171,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/21724-UX-UI-Designer?source=twitter'>
+<h5><a href='https://dribbble.com/jobs/21724-UX-UI-Designer?source=twitter'>
       UX / UI Designer at Lighthouse London - London, UK - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">London London</span></p>
@@ -191,7 +197,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/traegergrills/jobs/1932445'>Job Application for Sr. Mobile UX Designer at Traeger Wood Pellet Grills</a></h5> 
+<h5><a href='https://boards.greenhouse.io/traegergrills/jobs/1932445'>Job Application for Sr. Mobile UX Designer at Traeger Wood Pellet Grills</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -241,7 +247,7 @@
 <p><span class="badge badge-light">Cologne Cologne</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://vizrt.applytojob.com/apply/ocBSCGHGEK/UX-Designer'>UX Designer - Vizrt - Career Page</a></h5> 
+<h5><a href='http://vizrt.applytojob.com/apply/ocBSCGHGEK/UX-Designer'>UX Designer - Vizrt - Career Page</a></h5> 
 <p><span class="badge badge-light">San Antonio, TX</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -261,7 +267,7 @@
 <p><span class="badge badge-light">Roseville, California</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/19490-Senior-UX-Designer?source=twitter'>
+<h5><a href='https://dribbble.com/jobs/19490-Senior-UX-Designer?source=twitter'>
       Senior UX Designer at Primer - San Francisco, CA - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
@@ -291,11 +297,11 @@
 <p><span class="badge badge-light">Leicester London</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TechnologyNavigators/743999698404419-senior-ux-product-designer-user-experience-saas-html5-css3'>Technology Navigators Senior UX Product Designer - User Experience, SaaS, HTML5/CSS3 | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/TechnologyNavigators/743999698404419-senior-ux-product-designer-user-experience-saas-html5-css3'>Technology Navigators Senior UX Product Designer - User Experience, SaaS, HTML5/CSS3 | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Austin, Texas United States  Austin</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://mycujootv.recruitee.com/o/senior-ux-designer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mycujootv.recruitee.com/o/senior-ux-designer'>
       Senior UX Designer - MyCujoo
     </a></h5> 
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
@@ -313,11 +319,11 @@
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Renaissance/743999698387099-ux-designer-ii'>Renaissance UX Designer II | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Renaissance/743999698387099-ux-designer-ii'>Renaissance UX Designer II | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Minneapolis, MNUnited States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://coachhub.join.com/jobs/457564-ui-ux-designer-mobile-and-web-apps-m-f-d'>Job @ Coachhub (Berlin): UI/UX Designer ? Mobile &... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://coachhub.join.com/jobs/457564-ui-ux-designer-mobile-and-web-apps-m-f-d'>Job @ Coachhub (Berlin): UI/UX Designer ? Mobile &... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -337,7 +343,7 @@
 <p><span class="badge badge-light">K?ln, Deutschland  Berlin</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584492'>Stellenangebot: UI/UX Designer (m/f/x) (Berlin) ? dasauge? Stellenmarkt</a></h5> 
+<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584492'>Stellenangebot: UI/UX Designer (m/f/x) (Berlin) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -367,7 +373,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Cermaticom/743999698355434-ui-ux-designer'>Cermati.com UI/UX Designer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Cermaticom/743999698355434-ui-ux-designer'>Cermati.com UI/UX Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Jakarta Jakarta Jakarta, Indonesia  Indonesia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -387,7 +393,7 @@
 <p><span class="badge badge-light">Tel Aviv, Israel</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://www.summitrecruitment-search.com/jobs/user-experience-researcher-designer/'>?UX Designer | Recruitment Company in Kenya </a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.summitrecruitment-search.com/jobs/user-experience-researcher-designer/'>?UX Designer | Recruitment Company in Kenya </a></h5> 
 <p><span class="badge badge-light">Kenya</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -427,7 +433,7 @@
 <p><span class="badge badge-light">Mountain View, CA  Mountain View, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://intellipro.applytojob.com/apply/yT1KNfmbNV/UX-Researcher-Research-Assistant'>UX Researcher (Research Assistant) - IntelliPro Group Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/yT1KNfmbNV/UX-Researcher-Research-Assistant'>UX Researcher (Research Assistant) - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -460,10 +466,6 @@
 <h5><a href='https://jobs.lever.co/tivix/7840075b-47be-4305-9e55-979f6f2a71aa'>Tivix - Mid-level or Senior UI/UX Designer</a></h5> 
 <p><span class="badge badge-light">New York  San Francisco NYCLondon</span></p>
 <p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://www.amazon.jobs/en/jobs/939284/sr-ux-designer-amazon-gift-cards-incentives'>Sr. UX Designer, Amazon Gift Cards &amp; Incentives - Job ID: 939284 | Amazon.jobs</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-28</p>
 <hr/>
 
 
